Fix link wrap for real now

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -43,6 +43,7 @@ article.post {
 
     p a {
       word-wrap: break-word;
+      max-width: 100%;
     }
 }
 
